--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,13 +3,36 @@
 	padding: 0;
 	margin: 0;
 }
-html {
-	font-size: 62.5%;
-}
-
 :root {
 	--main-color: #008490;
 	--main-color-darker: #037782;
+	--main-color-darkest: #014b52;
 	--main-color-lighter: #0399a7;
+	--main-color-lightest: #02adbd;
 	--white: #fff;
+}
+html {
+	font-size: 62.5%;
+	scrollbar-width: thin;
+	scrollbar-color: var(--main-color-darker), var(--main-color);
+}
+html::-webkit-scrollbar {
+	width: 0.5vw;
+}
+html::-webkit-scrollbar-thumb {
+	background-color: #ffffff;
+	border-radius: 100vw;
+}
+html::-webkit-scrollbar-thumb:hover {
+	background-color: var(--main-color-lightest);
+}
+html::-webkit-scrollbar-track {
+	background: var(--main-color);
+}
+html::-webkit-scrollbar-track:hover {
+	background-color: var(--main-color-darker);
+}
+
+body {
+	min-height: 200vh;
 }
