--- a/src/components/Home/Hero/Hero.module.css
+++ b/src/components/Home/Hero/Hero.module.css
@@ -4,6 +4,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-direction: column;
 	transition: background-image 0.3s;
 	background-size: cover;
 }
@@ -15,5 +16,20 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.7);
+	background-color: rgba(0, 0, 0, 0.8);
+}
+.header p {
+	text-transform: uppercase;
+	font-size: 2rem;
+	z-index: 2;
+	color: #fff;
+}
+.header p svg {
+	color: var(--main-color);
+}
+.header p span {
+	font-weight: 200;
+}
+.box {
+	z-index: 5;
 }
