--- a/src/components/layout/Nav/NavItems/NavList.module.css
+++ b/src/components/layout/Nav/NavItems/NavList.module.css
@@ -12,10 +12,11 @@
 
 @media (max-width: 768px) {
 	.list {
+		z-index: 1200;
 		position: fixed;
 		top: 0;
 		left: 0;
-		margin-top: 7vh;
+		margin-top: 8vh;
 		width: 100vw;
 		height: 100vh;
 		display: flex;
@@ -41,6 +42,7 @@
 
 @media (min-width: 768px) {
 	.list ul {
+		height: 100%;
 		display: flex;
 		gap: 2em;
 	}
