fixed nav, onwards to style heros

--- a/src/components/Home/Hero/Hero.module.css
+++ b/src/components/Home/Hero/Hero.module.css
@@ -32,4 +32,11 @@
 }
 .box {
 	z-index: 5;
+	text-align: center;
+}
+.buttons {
+	margin-top: 5rem;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
 }
