--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -35,10 +35,11 @@ html::-webkit-scrollbar-track:hover {
 }
 
 body {
-	margin-top: 5vh;
 	font-family: 'Sora', sans-serif;
+	height: 300vh;
 }
 main {
+	margin-top: 7vh;
 	z-index: -2;
 }
 a {
