--- a/src/components/Home/Hero/Hero.module.css
+++ b/src/components/Home/Hero/Hero.module.css
@@ -7,6 +7,7 @@
 	flex-direction: column;
 	transition: background-image 0.3s;
 	background-size: cover;
+	background-position: center;
 }
 .header::before {
 	position: absolute;
@@ -22,8 +23,10 @@
 	text-transform: uppercase;
 	font-size: 2rem;
 	z-index: 2;
+	font-size: 3rem;
 	color: #fff;
 }
+
 .header p svg {
 	color: var(--main-color);
 }
@@ -38,6 +41,44 @@
 .buttons {
 	margin-top: 5rem;
 	display: flex;
-	justify-content: space-around;
 	align-items: center;
+	flex-direction: column;
+}
+@media (max-width: 576px) {
+	.btn {
+		font-size: 1.6rem;
+		width: 220px;
+		margin: 1em 0;
+		padding: 0.2em 0.5em;
+	}
+}
+
+@media (min-width: 400px) {
+	.btn {
+		font-size: 1.8rem;
+	}
+}
+@media (min-width: 576px) {
+	.buttons {
+		flex-direction: row;
+		gap: 1rem;
+		justify-content: space-around;
+	}
+	.btn {
+		font-size: 2rem;
+	}
+}
+@media (min-width: 992px) {
+	.buttons {
+		flex-direction: row;
+		justify-content: space-around;
+	}
+	.btn {
+		font-size: 2.2rem;
+	}
+}
+@media (min-width: 1200px) {
+	.header p {
+		font-size: 4rem;
+	}
 }
