--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,7 @@
 }
 html {
 	font-size: 62.5%;
+	scroll-behavior: smooth;
 	scrollbar-width: thin;
 	scrollbar-color: var(--main-color-darker), var(--main-color);
 }
