--- a/src/components/Home/Hero/SliderButtons.module.css
+++ b/src/components/Home/Hero/SliderButtons.module.css
@@ -6,18 +6,18 @@
 	display: flex;
 }
 .box button {
+	border-radius: 50%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 30px;
-	height: 30px;
+	width: 20px;
+	height: 20px;
 	font-size: 2rem;
 	padding: 0.5em;
 	margin: 1em;
 	background-color: transparent;
 	color: var(--white);
 	border: 2px solid var(--white);
-	border-radius: 2px;
 	cursor: pointer;
 }
 
