--- a/src/components/Home/About/Content/Counter/Counter.module.css
+++ b/src/components/Home/About/Content/Counter/Counter.module.css
@@ -1,3 +1,9 @@
 .counter {
+	margin-top: 5rem;
 	z-index: 2;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-flow: wrap row;
+	gap: 2rem;
 }
