--- a/src/components/Home/About/Logo/Logo.module.css
+++ b/src/components/Home/About/Logo/Logo.module.css
@@ -8,3 +8,14 @@
 .box img {
 	width: 250px;
 }
+
+
+@media(min-width: 992px) {
+	.box{
+		height: 100%;
+		width: 40%;
+	}
+	.box img{
+		width: 400px;
+	}
+}
