--- a/src/components/Home/About/Content/AboutText.module.css
+++ b/src/components/Home/About/Content/AboutText.module.css
@@ -7,7 +7,7 @@
 	justify-content: flex-start;
 	align-items: center;
 	flex-direction: column;
-	z-index: -1;
+	z-index: 1;
 	padding: 2em 0;
 	color: var(--white);
 }
@@ -24,6 +24,37 @@
 	margin-top: 1.5em;
 	z-index: 2;
 	text-align: center;
-	font-size: 1.2rem;
+	font-size: 1.4rem;
 	padding: 1em;
+	max-width: 400px;
+}
+.container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	z-index: 2;
+}
+
+@media (min-width: 400px) {
+	.text {
+		font-size: 1.6rem;
+	}
+}
+@media (min-width: 576px) {
+	.text {
+		font-size: 1.8rem;
+		max-width: 500px;
+	}
+}
+
+@media (min-width: 992px) {
+	.box {
+		width: 60%;
+		text-align: center;
+	}
+	.text {
+		font-size: 2rem;
+		max-width: 700px;
+	}
 }
