--- a/src/components/Home/About/Content/Counter/CounterItem.module.css
+++ b/src/components/Home/About/Content/Counter/CounterItem.module.css
@@ -22,3 +22,14 @@
 .box p {
 	font-size: 1.4rem;
 }
+
+@media (min-width: 992px) {
+	.box {
+		width: 170px;
+	}
+}
+@media (min-width: 1200px) {
+	.box {
+		width: 200px;
+	}
+}
