--- a/src/components/Home/About/Content/AboutText.module.css
+++ b/src/components/Home/About/Content/AboutText.module.css
@@ -8,7 +8,9 @@
 	align-items: center;
 	flex-direction: column;
 	z-index: 1;
-	padding: 2em 0;
+	padding: 4em 0;
+	padding-bottom: 10em;
+
 	color: var(--white);
 }
 .box::before {
