--- a/src/components/UI/Section/SectionTitle.module.css
+++ b/src/components/UI/Section/SectionTitle.module.css
@@ -20,3 +20,9 @@
 .blue::before {
 	background-color: var(--main-color-darker);
 }
+
+@media (min-width: 992px) {
+	.title {
+		font-size: 2.6rem;
+	}
+}
