--- a/src/components/Home/Decoration/Decoration.module.css
+++ b/src/components/Home/Decoration/Decoration.module.css
@@ -5,7 +5,7 @@
 	align-items: center;
 	flex-direction: column;
 	gap: 4rem;
-	padding: 5em 0;
+	padding: 5em 1em;
 }
 .content {
 	padding: 0 0.4em;
@@ -73,7 +73,7 @@
 @media (min-width: 992px) {
 	.decoration {
 		justify-content: center;
-		gap: 20rem;
+		gap: 10rem;
 		padding: 8em 0;
 	}
 	.image img {
@@ -86,5 +86,10 @@
 	.content {
 		align-self: flex-start;
 		margin-top: 4rem;
+	}
+}
+@media (min-width: 1200px) {
+	.decoration {
+		gap: 20rem;
 	}
 }
