--- a/src/components/UI/Section/SectionTitle.module.css
+++ b/src/components/UI/Section/SectionTitle.module.css
@@ -7,10 +7,9 @@
 .title::before {
 	position: absolute;
 	bottom: 0;
-	left: 0;
 	height: 2px;
 	background-color: var(--white);
-	width: 20%;
+	width: 30px;
 	content: '';
 }
 
