--- a/src/components/Home/Offer/Offer.module.css
+++ b/src/components/Home/Offer/Offer.module.css
@@ -3,3 +3,9 @@
 	text-align: center;
 	height: 200vh;
 }
+.box {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
