--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,7 @@
 	--main-color: #4169e1;
 	--main-color-darker: #1e47c2;
 	--main-color-darkest: #0a2370;
-	--main-color-lighter: #5880f8;
+	--main-color-lighter: #406bee;
 	--main-color-lightest: #7f9cf3;
 	--white: #fff;
 }
