--- a/src/components/Home/Offer/Card/OfferCard.module.css
+++ b/src/components/Home/Offer/Card/OfferCard.module.css
@@ -4,18 +4,21 @@
 	align-items: center;
 	flex-direction: column;
 	background-color: var(--white);
-	margin: 3rem 0;
+	margin: 2rem 0;
 	width: 300px;
 	padding: 1em;
 	color: var(--main-color-darker);
 	border-radius: 5px;
+	height: 400px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
 .card svg {
 	width: 100px;
 	height: 100px;
 }
 .card h2 {
-    font-size: 2.5rem;
+	margin: 0.2em 0;
+	font-size: 2.5rem;
 	text-transform: uppercase;
 }
 .card hr {
@@ -24,6 +27,7 @@
 }
 .card p {
 	color: #000;
-    font-size: 1.4rem;
+	padding: 0 1rem;
+	font-size: 1.4rem;
 	margin: 2em 0;
 }
