--- a/src/components/UI/Section/SectionTitle.module.css
+++ b/src/components/UI/Section/SectionTitle.module.css
@@ -1,6 +1,6 @@
 .title {
 	position: relative;
-	font-size: 2.2rem;
+	font-size: 2.4rem;
 	color: var(--white);
 	z-index: 2;
 }
@@ -23,5 +23,11 @@
 @media (min-width: 992px) {
 	.title {
 		font-size: 2.6rem;
+	}
+}
+
+@media (min-width: 1200px) {
+	.title {
+		font-size: 3rem;
 	}
 }
