added phone icon on scroll

--- a/src/components/Home/Offer/Offer.module.css
+++ b/src/components/Home/Offer/Offer.module.css
@@ -1,7 +1,8 @@
 .offer {
+	position: relative;
 	background-color: var(--main-color-lighter);
 	text-align: center;
-	padding: 4em 0;
+	padding: 6em 0;
 }
 .box {
 	margin: 4rem auto;
@@ -11,4 +12,41 @@
 	flex-wrap: wrap;
 	gap: 10rem;
 	max-width: 1200px;
+}
+
+.divider {
+	z-index: 5;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	overflow: hidden;
+	line-height: 0;
+}
+
+.divider svg {
+	position: relative;
+	display: block;
+	width: calc(100% + 1.3px);
+	height: 66px;
+}
+
+.shapeFill {
+	fill: #ffffff;
+}
+
+/** For tablet devices **/
+@media (min-width: 768px) and (max-width: 1023px) {
+	.divider svg {
+		width: calc(100% + 1.3px);
+		height: 47px;
+	}
+}
+
+/** For mobile devices **/
+@media (max-width: 767px) {
+	.divider svg {
+		width: calc(100% + 1.3px);
+		height: 33px;
+	}
 }
