--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,6 +10,7 @@
 	--main-color-darkest: #0a2370;
 	--main-color-lighter: #406bee;
 	--main-color-lightest: #7f9cf3;
+	--purple: #061c60;
 	--white: #fff;
 }
 html {
