--- a/src/components/Home/Offer/Card/OfferCard.module.css
+++ b/src/components/Home/Offer/Card/OfferCard.module.css
@@ -10,7 +10,8 @@
 	color: var(--main-color-darker);
 	border-radius: 5px;
 	height: 400px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+	box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+		rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
 .card svg {
 	width: 100px;
@@ -30,4 +31,8 @@
 	padding: 0 1rem;
 	font-size: 1.4rem;
 	margin: 2em 0;
+}
+
+.card h2.garage {
+	font-size: 1.6rem;
 }
