--- a/src/components/Home/Realizations/Realizations.module.css
+++ b/src/components/Home/Realizations/Realizations.module.css
@@ -1,19 +1,73 @@
 .realizations {
 	position: relative;
 	text-align: center;
-	height: 100vh;
+	padding: 6rem 0;
 }
-.box {
+.container {
+	margin-top: 5rem;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	flex-direction: column;
+	flex-wrap: wrap;
+	gap: 3rem;
 }
-.image {
+.btn {
+	display: inline-block;
+	margin-top: 2rem;
+}
+.box {
+	display: block;
 	position: relative;
-	width: 300px;
-	height: 300px;
+	width: 250px;
+	z-index: 6;
+	margin: 1.5rem 0;
 }
-.image img {
+.box img {
+	max-width: 100%;
+	height: 250px;
+	object-fit: cover;
+	transition: opacity 0.3s;
+}
+.reversal {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 250px;
 	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	opacity: 0;
+	transition: opacity 0.3s;
+	background-color: rgba(0, 0, 0, 0.7);
+}
+.box:hover img {
+	filter: blur(2px);
+}
+.box:hover .reversal {
+	opacity: 1;
+}
+
+@media (min-width: 992px) {
+	.container {
+		gap: 5rem;
+	}
+}
+@media (min-width: 1200px) {
+	.container {
+		gap: 10rem;
+	}
+
+	.box {
+		width: 300px;
+	}
+	.box img {
+		height: 300px;
+	}
+	.reversal {
+		height: 300px;
+	}
+	.btn{
+		margin-top: 6rem;
+	}
 }
