--- a/src/components/Home/Map/Map.module.css
+++ b/src/components/Home/Map/Map.module.css
@@ -2,13 +2,40 @@
 	position: relative;
 	background-color: var(--main-color);
 	padding: 5rem 0;
+	padding-bottom: 10rem;
 	text-align: center;
 	color: var(--white);
 }
 
 .box {
+	margin: 4rem 0;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
+	gap: 3rem;
+}
+.box p {
+	max-width: 300px;
+	font-size: 1.4rem;
+}
+.map {
+	width: 80%;
+}
+
+.map iframe {
+	width: 100%;
+}
+
+@media (min-width: 576px) {
+	.box p {
+		max-width: 350px;
+		font-size: 1.6rem;
+	}
+}
+
+@media (min-width: 576px) {
+	.box p {
+		max-width: 400px;
+	}
 }
