--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,9 +38,12 @@ body {
 }
 main {
 	margin-top: 7vh;
-	z-index: -2;
+	/* overflow: hidden; */
 }
 
 a {
 	text-decoration: none;
+}
+section {
+	overflow: hidden;
 }
