--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,6 +16,7 @@
 html {
 	font-size: 62.5%;
 	scroll-behavior: smooth;
+	scroll-padding-top: 7vh;
 	scrollbar-width: thin;
 	scrollbar-color: var(--main-color-darker), var(--main-color);
 }
