--- a/src/components/Error/Error.module.css
+++ b/src/components/Error/Error.module.css
@@ -5,7 +5,7 @@
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	height: 90vh;
+	min-height: 90vh;
 	gap: 5rem;
 }
 .text {
