--- a/src/components/Realizations/Gallery/BackdropPhoto.module.css
+++ b/src/components/Realizations/Gallery/BackdropPhoto.module.css
@@ -12,6 +12,10 @@
 	align-items: center;
 	margin-top: 2rem;
 }
+.buttons p{
+    color: #fff;
+    font-size: 2.5rem;
+}
 .buttons button {
 	cursor: pointer;
 	font-size: 5rem;
