--- a/src/components/Realizations/Gallery/Photo.module.css
+++ b/src/components/Realizations/Gallery/Photo.module.css
@@ -3,10 +3,9 @@
 	width: 250px;
 	height: 250px;
 	overflow: hidden;
-	cursor: pointer;
+	cursor: zoom-in;
 	border-radius: 5px;
 }
-
 .box img {
 	width: 100%;
 	height: 100%;
@@ -21,12 +20,21 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-direction: column;
+	gap: 1rem;
 	background-color: rgba(0, 0, 0, 0.7);
 	opacity: 0;
 	transition: opacity 0.3s;
+	color: var(--white);
+}
+.reversal svg {
+	font-size: 5rem;
+}
+.reversal p {
+	font-size: 1.8rem;
 }
 .box:hover img {
-	filter: blur(2px);
+	filter: blur(3px);
 }
 .box:hover .reversal {
 	opacity: 1;
