--- a/src/components/UI/Icons/PhoneIcon.module.css
+++ b/src/components/UI/Icons/PhoneIcon.module.css
@@ -29,6 +29,10 @@
 	align-items: center;
 	color: #fff;
 }
+.box span {
+	position: absolute;
+	opacity: 0;
+}
 
 @media (min-width: 576px) {
 	.box {
