--- a/src/components/Home/Hero/SliderButtons.module.css
+++ b/src/components/Home/Hero/SliderButtons.module.css
@@ -19,10 +19,13 @@
 	color: var(--white);
 	border: 2px solid var(--white);
 	cursor: pointer;
+	z-index: 1;
 }
 .box button span {
+	z-index: -1;
 	position: absolute;
 	opacity: 0;
+	font-size: 1px;
 }
 .box button.active {
 	background-color: var(--main-color-darker);
