--- a/src/components/Home/Realizations/Realizations.module.css
+++ b/src/components/Home/Realizations/Realizations.module.css
@@ -27,6 +27,8 @@
 	height: 250px;
 	object-fit: cover;
 	transition: opacity 0.3s;
+	box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+		rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 .reversal {
 	position: absolute;
