--- a/src/components/Realizations/Gallery/Photo.module.css
+++ b/src/components/Realizations/Gallery/Photo.module.css
@@ -5,6 +5,8 @@
 	overflow: hidden;
 	cursor: zoom-in;
 	border-radius: 5px;
+	box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+		rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 .box img {
 	width: 100%;
