--- a/src/components/Home/Hero/Hero.module.css
+++ b/src/components/Home/Hero/Hero.module.css
@@ -22,6 +22,9 @@
 	background-color: rgba(0, 0, 0, 0.8);
 }
 .header p {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	text-transform: uppercase;
 	font-size: 2rem;
 	z-index: 2;
