added on all page new theme images, added call to action color

--- a/src/components/Home/Offer/Card/OfferCard.module.css
+++ b/src/components/Home/Offer/Card/OfferCard.module.css
@@ -7,7 +7,7 @@
 	margin: 2rem 0;
 	width: 300px;
 	padding: 1em;
-	color: var(--main-color-darker);
+	color: var(--main-cta);
 	border-radius: 5px;
 	height: 400px;
 	box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
