--- a/src/components/Home/Contact/ContactOption.module.css
+++ b/src/components/Home/Contact/ContactOption.module.css
@@ -7,7 +7,7 @@
 	gap: 2rem;
 }
 .icon {
-	background-color: var(--main-color-darker);
+	background-color: var(--main-cta);
 	width: 80px;
 	height: 80px;
 	border-radius: 50%;
@@ -22,7 +22,7 @@
 
 .text {
 	text-align: center;
-	color: var(--main-color-darker);
+	color: var(--main-cta);
 	font-size: 1.8rem;
 }
 
