--- a/src/components/layout/Nav/Nav.module.css
+++ b/src/components/layout/Nav/Nav.module.css
@@ -14,22 +14,14 @@
 	height: 100%;
 	max-width: 1400px;
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-items: center;
 }
 
 .burger {
 	color: var(--white);
 }
-.themeIcon {
-	background-color: var(--second-theme-main-color);
-	width: 30px;
-	height: 30px;
-	border-radius: 50%;
-	cursor: pointer;
-	margin-right: 1em;
-	border: 2px solid #fff;
-}
+
 .icons {
 	display: flex;
 	justify-content: center;
@@ -40,5 +32,7 @@
 	.burger {
 		display: none;
 	}
-
+	.icons {
+		display: none;
+	}
 }
