--- a/src/components/layout/Nav/NavItems/NavList.module.css
+++ b/src/components/layout/Nav/NavItems/NavList.module.css
@@ -1,5 +1,8 @@
 .list ul {
 	list-style-type: none;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 .list ul li {
 	text-transform: uppercase;
