added media query for slider buttons

--- a/src/components/Home/Hero/SliderButtons.module.css
+++ b/src/components/Home/Hero/SliderButtons.module.css
@@ -30,3 +30,9 @@
 .box button.active {
 	background-color: var(--main-color-darker);
 }
+
+@media (max-height: 500px) {
+	.box {
+		display: none;
+	}
+}
