--- a/src/components/Home/Hero/Hero.module.css
+++ b/src/components/Home/Hero/Hero.module.css
@@ -1,7 +1,7 @@
 .header {
 	position: relative;
 	margin-top: 7vh;
-	height: 93vh;
+	min-height: 93vh;
 	display: flex;
 	justify-content: center;
 	align-items: center;
