--- a/src/components/Realizations/Gallery/Gallery.module.css
+++ b/src/components/Realizations/Gallery/Gallery.module.css
@@ -4,6 +4,7 @@
 	text-align: center;
 	min-height: 100vh;
 	padding: 5rem 0;
+	padding-bottom: 12rem;
 }
 .box {
 	margin: 5rem auto;
@@ -11,6 +12,6 @@
 	justify-content: center;
 	align-items: center;
 	flex-wrap: wrap;
-	gap: 5rem;
+	gap: 2rem;
 	max-width: 1200px;
 }
