--- a/src/components/Realizations/Header/Header.module.css
+++ b/src/components/Realizations/Header/Header.module.css
@@ -4,8 +4,9 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-direction: column;
 	padding: 5rem 0;
-	padding-bottom: 8rem;
+	padding-bottom: 12rem;
 }
 
 .content {
@@ -38,6 +39,9 @@
 .image img {
 	width: 100%;
 }
+.button {
+	margin-top: 3rem;
+}
 
 @media (min-width: 576px) {
 	.content p {
@@ -51,17 +55,16 @@
 		margin: 0 auto;
 		display: flex;
 		align-items: center;
-        gap: 2rem;
+		gap: 2rem;
 	}
 	.content p {
 		margin: 0.5rem 0;
 	}
 }
 @media (min-width: 992px) {
-    .box{
-        gap: 8rem;
-        
-    }
+	.box {
+		gap: 8rem;
+	}
 	.image {
 		width: 400px;
 	}
@@ -75,10 +78,7 @@
 }
 
 @media (min-width: 1200px) {
-    .box{
-        gap: 15rem;
-        
-    }
-
+	.box {
+		gap: 15rem;
+	}
 }
-
