--- a/src/components/UI/Buttons/SpecialButton.module.css
+++ b/src/components/UI/Buttons/SpecialButton.module.css
@@ -4,7 +4,7 @@
 	font-size: 1.8rem;
 	padding: 0.5em 1em;
 	transition: background-color 0.3s, border-color 0.3s;
-	border: 2px solid transparent;
+	border: 2px solid white;
 }
 .button:hover {
 	background-color: var(--main-cta-darker);
