--- a/src/components/layout/Footer/Footer.module.css
+++ b/src/components/layout/Footer/Footer.module.css
@@ -3,6 +3,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-direction: column;
 	background-color: var(--main-color-darkest);
 	font-size: 1.2rem;
 	color: var(--white);
@@ -13,7 +14,10 @@
 .footer span {
 	font-weight: 200;
 }
-
+.policy {
+	opacity: 0.6;
+	margin-top: 1em;
+}
 @media (min-width: 400px) {
 	.footer {
 		font-size: 1.4rem;
