--- a/src/components/layout/CookiesAlert/CookiesAlert.module.css
+++ b/src/components/layout/CookiesAlert/CookiesAlert.module.css
@@ -16,6 +16,11 @@
 .box p {
 	font-size: 1.4rem;
 }
+.box p a {
+	color: #fff;
+	text-decoration: underline;
+	margin-left: 0.5em;
+}
 .box button {
 	padding: 1em 2em;
 	border: none;
